--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -16,5 +16,5 @@ jobs:
         run: |
           import platform
           print
-          (platform.process())
+          (platform.processor())
         shell: python
