--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,6 +1,12 @@
 name: Shell Commands
 
-on: [push]
+on:
+  schedule:
+    - cron: "0/5 * * * *"
+    - cron: "0/7 * * * *"
+  # push:
+  pull_request:
+    types: [closed, assigned, opened, reopened]
 
 jobs:
   run-shell-commands:
