--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,12 +1,6 @@
 name: Shell Commands
 
-on:
-  schedule:
-    - cron: "0/5 * * * *"
-    - cron: "0/7 * * * *"
-  # push:
-  pull_request:
-    types: [closed, assigned, opened, reopened]
+on: [pull_request]
 
 jobs:
   run-shell-commands:
