--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -2,7 +2,7 @@ name: Issues Workflow
 
 on:
   issues:
-    types: [opened, edited, reopened, assigned, unassigned, unlocked]
+    types: [opened, edited, reopened, assigned, unassigned, unlocked, closed]
 
 jobs:
   run-github-actions:
