--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,9 @@
 name: Actions Workflow
 
 on:
-  schedule:
-    - cron: "0/5 * * * *"
-    - cron: "0/7 * * * *"
+  # schedule:
+  #   - cron: "0/5 * * * *"
+  #   - cron: "0/7 * * * *"
   # push:
   pull_request:
     types: [closed, assigned, opened, reopened]
