--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -5,9 +5,12 @@ on: [pull_request]
 jobs:
   run-shell-commands:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
       - name: echo a string
         run: echo "Hello World"
+        timeout-minutes: 60
+        continue-on-error: true
       - name: multiline script
         run: |
           node -v
