--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -3,12 +3,18 @@ on: push
 
 jobs:
   node-version:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+        node_version: [8, 9, 10]
+      max-parallel: 2
+      fail-fast: false
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Log node version
         run: node -v
       - uses: actions/setup-node@v1
         with:
-          node-version: 10
+          node-version: ${{ matrix.node_version }}
       - name: Log node version
         run: node -v
