--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,9 +7,22 @@ jobs:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
         node_version: [8, 9, 10]
-      max-parallel: 2
+        include:
+          - os: ubuntu-latest
+            node-version: 9
+            is_ubuntu_8: "true"
+        exclude:
+          - os: ubuntu-latest
+            node_version: 9
+          - os: macos-latest
+            node-version: 8
+          - os: windows-latest
+            node-version: 10
+      max-parallel: 3
       fail-fast: false
     runs-on: ${{ matrix.os }}
+    env:
+      IS_UBUNTU_8: ${{ matrix.is_ubuntu_8}}
     steps:
       - name: Log node version
         run: node -v
@@ -17,4 +30,6 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
       - name: Log node version
-        run: node -v
+        run: |
+          node -v
+          echo $IS_UBUNTU_8
