--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -21,7 +21,7 @@ jobs:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: eccho "$GITHUB_CONTEXT"
       - name: Dump job context
-        if: failure()
+        # if: failure()
         env:
           JOB_CONTEXT: ${{ toJson(job) }}
         run: echo "$JOB_CONTEXT"
@@ -30,7 +30,7 @@ jobs:
           STEPS_CONTEXT: ${{ toJson(steps) }}
         run: echo "$STEPS_CONTEXT"
       - name: Dump runner context
-        if: always()
+        # if: always()
         env:
           RUNNER_CONTEXT: ${{ toJson(runner) }}
         run: echo "$RUNNER_CONTEXT"
