--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -25,6 +25,11 @@ jobs:
         with:
           entrypoint: ./script.sh
           args: "Some string"
+      - name: Send a slack message
+        uses: docker://technosophos/slack-notify
+        env:
+          SLACK_WEBHOOK: ""
+          SLACK_NESSAGE: ""
   mode-docker:
     runs-on: ubuntu-latest
     services:
